<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AdvoGo</string>
    <string name="title_activity_map">Google Maps</string>
    <string name="google_maps_api_key">AIzaSyClSagttHxMtRJQ9XPUyiKyq0r3SKuBxdk</string>

    <!--SHARED-->
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atencao">Atenção</string>
    <string name="create">Salvar</string>
    <string name="update">Atualizar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="submit">Confirmar</string>
    <string name="adv">Advogado</string>
    <string name="data">Data</string>
    <string name="selecionar">Selecionar</string>
    <string name="selectAdv">Selecionar advogado</string>
    <string name="selectData">Selecionar data</string>
    <string name="labelColor">Cor</string>
    <string name="hintTipo">Tipo</string>

    <string name="confirmacaoDeletarProcesso">Deseja deletar o processo \'%1$s\'?</string>
    <string name="confirmacaoDeletarCliente">Deseja deletar o cliente \'%1$s\'?</string>
    <string name="confirmacaoDeletarDiligencia">Deseja deletar a diligência \'%1$s\'?</string>
    <string name="confirmacaoDeletarAdvogado">Deseja deletar o advogado \'%1$s\'?</string>
    <string name="confirmacaoDeletarTipo">Deseja deletar o tipo \'%1$s\'?</string>
    <string name="confirmacaoDeletarStatus">Deseja deletar o status \'%1$s\'?</string>

    <!--HINT-->
    <string name="hintProcessoName">Nome</string>
    <string name="hintProcessoDescription">Descrição</string>
    <string name="hintProcessoAndamentoDescription">Descrição</string>
    <string name="hintNumeroProcessoDescription">Nº do processo</string>
    <string name="hintTipoDescription">Tipo do processo</string>
    <string name="hintStatusDescription">Status do processo</string>
    <string name="hintTipoAndamentoDescription">Tipo do andamento</string>
    <string name="hintStatusAndamentoDescription">Status do andamento</string>
    <string name="hintDataDescription">Data do processo</string>
    <string name="hintDataDiligenciaDescription">Data da diligência</string>
    <string name="hintDataAndamentoDescription">Data do andamento</string>
    <string name="hintClienteDescription">Selecione o cliente</string>
    <string name="hintAdvDescription">Selecione o advogado</string>
    <string name="hintDiligenciasDescription">Diligências</string>
    <string name="hintCpf">CPF</string>
    <string name="hintCep">Digite o CEP</string>
    <string name="hintDocumento">Documento</string>
    <string name="hintContato">Contato</string>
    <string name="hintWhatsapp">Whatsapp</string>

    <string name="hintEndereco">Endereço</string>
    <string name="hintEnderecoOuCep">Rua ou CEP</string>
    <string name="hintEnderecoNumero">Nº da Rua</string>
    <string name="hintEnderecoBairro">Bairro</string>
    <string name="hintEnderecoCidade">Cidade</string>

    <!--DILIGENCIA CADASTRO-->
    <string name="diligenciaDescricao">Descrição</string>
    <string name="diligenciaTipo">Tipo da Diligência</string>
    <string name="hintDiligenciaEndereco">Endereço da Diligência</string>
    <string name="diligenciaStatus">Status da Diligência</string>
    <string name="hintDiligenciaData">Data da Diligência</string>
    <string name="hintDiligenciaProcesso">Nº do Processo</string>
    <string name="hintDiligenciaAdvogado">Advogado designado</string>
    <string name="hintStatusDiligenciaDescription">Status da Diligência</string>
    <string name="hintTipoDiligenciaDescription">Tipo da Diligência</string>

    <!--SPLASH SCREEN-->
    <string name="splashScreenTexto">Advogo</string>

    <!--NAV-->
    <string name="navPerfil">Perfil</string>
    <string name="navAdvogados">Advogados</string>
    <string name="navDeslogar">Sair</string>

    <!--GERAL-->
    <string name="aguardePorfavor" tools:ignore="TypographyEllipsis">Aguarde por favor...</string>
    <string name="cliqueNovamente">Clique novamente.</string>
    <string name="nenhumProcessoEncontrado">Nenhum processo encontrado!</string>
    <string name="nenhumClienteEncontrado">Nenhum cliente encontrado!</string>
    <string name="nenhumAdvogadoEncontrado">Nenhum advogado encontrado!</string>
    <string name="nenhumaDiligenciaEncontrada">Nenhuma diligência encontrada!</string>
    <string name="nenhumAnexoEncontrado">Nenhum anexo encontrado!</string>
    <string name="nenhumAndamentoEncontrado">Nenhum andamento encontrado!</string>
    <string name="nenhumaDiligenciaHistoricoEncontrado">Nenhum histórico encontrado!</string>
    <string name="nenhumProcessoHistoricoEncontrado">Nenhum histórico encontrado!</string>
    <string name="nenhumStatusEncontrado">Nenhum status encontrado!</string>
    <string name="nenhumTipoEncontrado">Nenhum tipo encontrado!</string>
    <string name="nenhumProcessoParteEncontrado">Nenhuma parte cadastrada!</string>

    <!--INTRO-->
    <string name="imageContentDescription">Imagem</string>
    <string name="letsGetStartedText">Vamos começar!</string>
    <string name="introTextDescription">Gerencie seus processos em múltiplos aparelhos com o AdvoGo!.</string>
    <string name="signIn">Entrar</string>
    <string name="signUp">Registrar-se</string>

    <!--CADASTRO-->
    <string name="signUpDescriptionText">Preencha o formulário para se cadastrar.</string>
    <string name="name">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="password">Senha</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>

    <!--LOGIN-->
    <string name="signInDescriptionText">Entre com seu e-mail e senha.</string>

    <!--PERFIL-->
    <string name="mobile">Telefone</string>
    <string name="profile">Perfil</string>
    <string name="oab">Nº OAB</string>
    <string name="endereco">Endereço</string>

    <!--CADASTRO PROCESSO-->
    <string name="hintProcessoNome">Enter the board name</string>
    <string name="hintProcessoDescricao">Enter the board description</string>

    <!--CADASTRO CLIENTE-->
    <string name="cadastroClienteTitle">Cadastro Cliente</string>
    <string name="cadastroClienteDescriptionText">Preencha o formulário abaixo para o cadastro.</string>

    <!--CADASTRO CLIENTE-->
    <string name="diligenciaCadastroTitle">Cadastro Diligência</string>
    <string name="diligenciaCadastroDescriptionText">Preencha o formulário abaixo para a diligência.</string>

    <string name="deletarProcesso">Deletar Processo</string>
    <string name="deletarCliente">Deletar Cliente</string>
    <string name="deletarDiligencia">Deletar Diligência</string>
    <string name="selecionarAdvogado">Selecionar Advogado</string>
    <string name="selecionarProcesso">Selecionar Processo</string>
    <string name="deletarAdvogado">Deletar Advogado</string>
    <string name="addAdvogado">Add Advogado</string>
    <string name="selecionarCliente">Selecione um cliente</string>
    <string name="filtrarDiligencias">Filtrar Diligências</string>
    <string name="ordenarDiligencias">Ordenar Diligências</string>
    <string name="buscarDiligencias">Buscar Diligências</string>
    <string name="filtrarProcessos">Filtrar Processos</string>
    <string name="ordenarProcessos">Ordenar Processos</string>
    <string name="buscarProcessos">Buscar Processos</string>
    <string name="filtrarClientes">Filtrar Clientes</string>
    <string name="ordenarClientes">Ordenar Clientes</string>
    <string name="buscarClientes">Buscar Clientes</string>

    <string name="defaultNotificationChannelId">advogo_notification_channel_id</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="gerenciar">Gerenciar</string>
    <string name="processo_tipos">Processo Tipos</string>
    <string name="processo_status">Processo Status</string>
    <string name="diligencia_tipos">Diligência Tipos</string>
    <string name="diligencia_status">Diligência Status</string>
    <string name="andamento_tipos">Andamento Tipos</string>
    <string name="andamento_status">Andamento Status</string>
    <string name="anexo_tipos">Anexo Tipos</string>

    <string name="hintPrazo">Prazo</string>
    <string name="hintSomenteDiasUteis">Somente dias úteis?</string>
</resources>