<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/tvAppNameIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/introScreenTitleTextMarginTop"
        android:text="@string/app_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/introScreenTitleTextSize"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat_semibold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/introScreenImageMarginTop"
        android:contentDescription="@string/imageContentDescription"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/letsGetStartedTextMarginTop"
        android:text="@string/letsGetStartedText"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/letsGetStartedTextSize"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat_semibold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/introTextMarginStartEnd"
        android:layout_marginTop="@dimen/introTextMarginTop"
        android:layout_marginEnd="@dimen/introTextMarginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/introTextLineSpacingExtra"
        android:text="@string/introTextDescription"
        android:textColor="@color/black"
        android:textSize="@dimen/introTextSize"
        app:fontFamily="@font/lato" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/btnMarginStartEnd"
        android:layout_marginBottom="@dimen/btnMarginStartEnd">

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnMarginStartEnd"
            android:layout_marginTop="@dimen/introScreenSignInBtnMarginTop"
            android:layout_marginEnd="@dimen/btnMarginStartEnd"
            android:background="@drawable/shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btnPaddingTopBottom"
            android:paddingBottom="@dimen/btnPaddingTopBottom"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSize" />

        <Button
            android:id="@+id/btnCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btnMarginStartEnd"
            android:layout_marginTop="@dimen/introScreenSignUpBtnMarginTop"
            android:layout_marginEnd="@dimen/btnMarginStartEnd"
            android:background="@drawable/white_border_shape_button_rounded"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:paddingTop="@dimen/btnPaddingTopBottom"
            android:paddingBottom="@dimen/btnPaddingTopBottom"
            android:text="@string/signUp"
            android:textColor="@color/white"
            android:textSize="@dimen/btnTextSize" />

    </LinearLayout>

</LinearLayout>
